--- a/rickandmorty/index.html
+++ b/rickandmorty/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="javascript/main.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="media/favicon/rick/rick.webp">
     <title>rickandmorty</title>
 </head>
 <body>
